--- a/index.html
+++ b/index.html
@@ -5,24 +5,40 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Test Vue </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     </head>
     <body>
-        <!-- This block is the menu we will use to add projects and user we want to watch-->
-        <div id="menu">
-
-        </div>
         <!-- This block is the feed in which we will diplay info about watched repo-->
-        <div id="feed">
-                <ul id="example-1">
-                    <li v-for="item in repo">
-                          {{ item.name}} <br>
-                          <ul id="example-1">
-                            <li v-for="commit in item.commits">
+        <div id="feed" class="container">
+                <label> Watched Project </label>
+                <select v-model="selected_project">
+                    <option disabled value="">Choose</option>
+                    <option v-for="project in projects" > {{ project }}</option>
+                </select>
+                <label>Watched User</label>
+                <select v-model="selected_user">
+                    <option disabled value="">Choose</option>
+                    <option v-for="user in users" > {{ user }}</option>
+                </select>
+
+                <label> Date from</label>
+                <input type="date" name="date_from" v-model="date_from">
+
+                <label> Date to</label>
+                <input type="date" name="date_to" v-model="date_to">
+
+                <ul id="example-1" class="list-group">
+                    <li v-for="item in repo" class="list-group-item">
+                        {{ item.owner.login }}  {{ item.name}} <br>
+                          <ul id="example-1">  
+                            <li v-for="commit in item.commits" class="list-group-item">
                                   {{ commit.commit.author.name }} {{ commit.commit.message }} {{ commit.sha }}
                             </li>
+                            {{ item.readme.download_url}}
                         </ul>
                     </li>
                 </ul>
